# rcmp

./: .gitignore  package-lock.json  package.json
data/: account.sql  fund.sql  meta-holidays.sql  meta-product_infos.sql  meta-product_segments.sql  meta-trading_segments.sql  meta.sql  查询资金2025-02-06.csv
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/config/: config.toml.template  config.toml.tpl
src-tauri/data/: meta.db-shm  meta.db-wal  查询资金2025-02-06.csv
src-tauri/sql/fund/: fund.sql
src-tauri/sql/meta/: meta-01_holidays.sql  meta-02_holidays_2026.sql  meta-04_product_segments.sql  meta-holidays.sql  meta-product_infos.sql  meta-product_segments.sql  meta-trading_segments.sql  meta.sql  meta_migrate_0.1.3.sql  meta_migrate_0.1.5.sql
src-tauri/src/: ctp.rs  db.rs  lib.rs  main.rs
src-tauri/tddata/: .env  Cargo.toml
src-tauri/tddata/src/: ctp.rs  db.rs  file.rs  lib.rs
src/components/: AccountTable.vue  Calendar.vue  Feedback.vue  GroupAccountTable.vue  GroupEditor.vue  GroupSelector.vue  InvestorSelector.vue  Statistics.vue  TUAccountSinker.vue  TUSinker.vue  interface.d.ts
src/models/: db.ts  type.ts
src/store/: fund.ts  meta.ts  user.ts
src/utils/: feedback.ts  formatter.ts
