[package]
name = "rcmp"
version = "0.1.0"
description = "A risk controle management platform"
authors = ["frozenpine"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "rcmp_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

tddata = { path = "tddata"}
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-log = "2"
log = "0.4.22"
chrono = "0.4.39"
chrono-tz = "0.10.0"

[workspace]
members = ["tddata"]
