[package]
name = "rcmp"
version = "0.1.0"
description = "A risk controle management platform"
authors = ["frozenpine"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "rcmp_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-log = "2"
log = "0.4.22"
chrono-tz = "0.10.0"
futures = "0.3.31"
tokio = "1.42.0"
toml = "0.8.19"
derivative = "2.2.0"
tauri-plugin-dialog = "2"
csv = "1.3.1"
encoding_rs = "0.8.35"
encoding_rs_io = "0.1.7"
env_logger = "0.11.5"
lazy_static = { version = "1.5.0", features = [] }
sqlx = { version = "0.8.2",features = ["default", "sqlite", "runtime-tokio", "chrono"] }
walkdir = "2.5.0"
chrono = { version = "0.4.39", features = ["serde"] }
