[package]
name = "tddata"
version = "0.1.0"
edition = "2021"

[dependencies]
csv = "1.3.1"
encoding_rs = "0.8.35"
encoding_rs_io = "0.1.7"
env_logger = "0.11.6"
lazy_static = { version = "1.5.0", features = [] }
log = "0.4.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8.2",features = ["default", "sqlite", "runtime-tokio"] }
tokio = "1.34.0"
